# stock_tracker_webapp

./: .gitignore  data_parsing.py  pyproject.toml  requirements.txt
instance/: stonks.sqlite
stonks/: __init__.py  dashboard.py  data_parsing.py  get-stock-data.py  news.py  schema.sql  stocks.py
stonks/static/: graph.js  news.js  style.css
stonks/templates/: base.html  dashboard.html  news.html  stocks.html
utility_webapp/: __init__.py  data_parsing.py  db.py  stocks.py
utility_webapp/static/: graph.js  style.css
utility_webapp/templates/: news.html  stocks.html
